# FeTorrent

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  routes.rs  server.rs  ws.rs
crates/cli/: Cargo.toml
crates/cli/src/: banner.txt  main.rs
crates/core/: Cargo.toml
crates/core/src/: bencode.rs  config.rs  dht.rs  engine.rs  error.rs  lib.rs  magnet.rs  models.rs  pieces.rs  storage.rs  torrent.rs  torrent_task.rs
crates/core/src/peer/: handshake.rs  manager.rs  message.rs  mod.rs  session.rs
crates/core/src/tracker/: http.rs  mod.rs  udp.rs
crates/core/tests/: integration.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  api.js  index.css
ui/src/components/ui/: button.jsx  tabs.jsx
ui/src/lib/: utils.js
