[workspace]
members = [
    "crates/core",
    "crates/api",
    "crates/cli",
    "crates/daemon",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["FeTorrent Contributors"]
description = "A modern, high-performance BitTorrent engine and client written in Rust."
license = "MIT"
repository = "https://github.com/tryh4rd-26/FeTorrent"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
hyper = { version = "1", features = ["full"] }

# HTTP client (for tracker communication)
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# Config
config = "0.14"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "color", "env"] }
colored = "2"
indicatif = "0.17"
comfy-table = "7"

# Crypto / hashing
sha1 = "0.10"
hex = "0.4"
rand = "0.8"

# Performance
dashmap = "5"
rayon = "1"
bytes = { version = "1", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dirs = "5"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
url = "2"
urlencoding = "2"
rfd = "0.14"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
