[package]
name = "fetorrent-api"
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
fetorrent-core = { version = "0.2.0", path = "../core" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
rfd = { workspace = true }
