[package]
name = "fetorrent"
version.workspace = true
edition.workspace = true

[dependencies]
fetorrent-core = { path = "../core" }

tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
clap = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util = { workspace = true }
webbrowser = "1.0"
