[package]
name = "fetorrent"
version.workspace = true
description = "A modern BitTorrent CLI and dashboard launcher."
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
fetorrent-core = { version = "0.2.2", path = "../core" }

tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart"] }
clap = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util = { workspace = true }
webbrowser = "1.0"
