[package]
name = "fetorrent-core"
version.workspace = true
description = "Core engine implementation for the FeTorrent BitTorrent suite."
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
dirs.workspace = true
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
