[package]
name = "fetorrent-daemon"
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
fetorrent-core = { version = "0.2.0", path = "../core" }
fetorrent-api = { version = "0.2.0", path = "../api" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
tracing-appender = "0.2.4"
